--- a/mcp_project_001/pyproject.toml
+++ b/mcp_project_001/pyproject.toml
@@ -3,11 +3,14 @@ name = "mcp-project-001"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
     "langchain>=1.1.0",
     "langchain-groq>=1.1.0",
     "langchain-mcp-adapters>=0.1.14",
+    "langchain-tavily>=0.2.13",
     "langgraph>=1.0.4",
-    "mcp>=1.22.0",
+    "langgraph-api>=0.5.27",
+    "langgraph-cli[inmem]>=0.4.7",
+    "mcp>=1.23.1",
 ]
